# gui-databases

./: .gitignore  README.md  TODO.md  pyproject.toml
gui_databases/: backend.py  frontend.py  gui.py  main.py  usrcreds.json
